--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "e7a969ff-bed6-413a-b966-eab3050e44cb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "f8e1faea-57f8-4185-acf3-b55ecad029b5",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "<table class=\"dataframe\">\n",
        "<caption>A spec_tbl_df: 4176 × 9</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>M</th><th scope=col>0.455</th><th scope=col>0.365</th><th scope=col>0.095</th><th scope=col>0.514</th><th scope=col>0.2245</th><th scope=col>0.101</th><th scope=col>0.15</th><th scope=col>15</th></tr>\n",
+       "\t<tr><th scope=col>Sex</th><th scope=col>Length</th><th scope=col>Diameter</th><th scope=col>Height</th><th scope=col>Whole_weight</th><th scope=col>Shucked_weight</th><th scope=col>Visera_weight</th><th scope=col>Shell_weight</th><th scope=col>Rings</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
@@ -109,7 +109,7 @@
       "text/latex": [
        "A spec\\_tbl\\_df: 4176 × 9\n",
        "\\begin{tabular}{lllllllll}\n",
-       " M & 0.455 & 0.365 & 0.095 & 0.514 & 0.2245 & 0.101 & 0.15 & 15\\\\\n",
+       " Sex & Length & Diameter & Height & Whole\\_weight & Shucked\\_weight & Visera\\_weight & Shell\\_weight & Rings\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
        "\t M & 0.350 & 0.265 & 0.090 & 0.2255 & 0.0995 & 0.0485 & 0.070 &  7\\\\\n",
@@ -179,7 +179,7 @@
        "\n",
        "A spec_tbl_df: 4176 × 9\n",
        "\n",
-       "| M &lt;chr&gt; | 0.455 &lt;dbl&gt; | 0.365 &lt;dbl&gt; | 0.095 &lt;dbl&gt; | 0.514 &lt;dbl&gt; | 0.2245 &lt;dbl&gt; | 0.101 &lt;dbl&gt; | 0.15 &lt;dbl&gt; | 15 &lt;dbl&gt; |\n",
+       "| Sex &lt;chr&gt; | Length &lt;dbl&gt; | Diameter &lt;dbl&gt; | Height &lt;dbl&gt; | Whole_weight &lt;dbl&gt; | Shucked_weight &lt;dbl&gt; | Visera_weight &lt;dbl&gt; | Shell_weight &lt;dbl&gt; | Rings &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|\n",
        "| M | 0.350 | 0.265 | 0.090 | 0.2255 | 0.0995 | 0.0485 | 0.070 |  7 |\n",
        "| F | 0.530 | 0.420 | 0.135 | 0.6770 | 0.2565 | 0.1415 | 0.210 |  9 |\n",
@@ -245,68 +245,130 @@
        "\n"
       ],
       "text/plain": [
-       "     M 0.455 0.365 0.095 0.514  0.2245 0.101  0.15   15\n",
-       "1    M 0.350 0.265 0.090 0.2255 0.0995 0.0485 0.070   7\n",
-       "2    F 0.530 0.420 0.135 0.6770 0.2565 0.1415 0.210   9\n",
-       "3    M 0.440 0.365 0.125 0.5160 0.2155 0.1140 0.155  10\n",
-       "4    I 0.330 0.255 0.080 0.2050 0.0895 0.0395 0.055   7\n",
-       "5    I 0.425 0.300 0.095 0.3515 0.1410 0.0775 0.120   8\n",
-       "6    F 0.530 0.415 0.150 0.7775 0.2370 0.1415 0.330  20\n",
-       "7    F 0.545 0.425 0.125 0.7680 0.2940 0.1495 0.260  16\n",
-       "8    M 0.475 0.370 0.125 0.5095 0.2165 0.1125 0.165   9\n",
-       "9    F 0.550 0.440 0.150 0.8945 0.3145 0.1510 0.320  19\n",
-       "10   F 0.525 0.380 0.140 0.6065 0.1940 0.1475 0.210  14\n",
-       "11   M 0.430 0.350 0.110 0.4060 0.1675 0.0810 0.135  10\n",
-       "12   M 0.490 0.380 0.135 0.5415 0.2175 0.0950 0.190  11\n",
-       "13   F 0.535 0.405 0.145 0.6845 0.2725 0.1710 0.205  10\n",
-       "14   F 0.470 0.355 0.100 0.4755 0.1675 0.0805 0.185  10\n",
-       "15   M 0.500 0.400 0.130 0.6645 0.2580 0.1330 0.240  12\n",
-       "16   I 0.355 0.280 0.085 0.2905 0.0950 0.0395 0.115   7\n",
-       "17   F 0.440 0.340 0.100 0.4510 0.1880 0.0870 0.130  10\n",
-       "18   M 0.365 0.295 0.080 0.2555 0.0970 0.0430 0.100   7\n",
-       "19   M 0.450 0.320 0.100 0.3810 0.1705 0.0750 0.115   9\n",
-       "20   M 0.355 0.280 0.095 0.2455 0.0955 0.0620 0.075  11\n",
-       "21   I 0.380 0.275 0.100 0.2255 0.0800 0.0490 0.085  10\n",
-       "22   F 0.565 0.440 0.155 0.9395 0.4275 0.2140 0.270  12\n",
-       "23   F 0.550 0.415 0.135 0.7635 0.3180 0.2100 0.200   9\n",
-       "24   F 0.615 0.480 0.165 1.1615 0.5130 0.3010 0.305  10\n",
-       "25   F 0.560 0.440 0.140 0.9285 0.3825 0.1880 0.300  11\n",
-       "26   F 0.580 0.450 0.185 0.9955 0.3945 0.2720 0.285  11\n",
-       "27   M 0.590 0.445 0.140 0.9310 0.3560 0.2340 0.280  12\n",
-       "28   M 0.605 0.475 0.180 0.9365 0.3940 0.2190 0.295  15\n",
-       "29   M 0.575 0.425 0.140 0.8635 0.3930 0.2270 0.200  11\n",
-       "30   M 0.580 0.470 0.165 0.9975 0.3935 0.2420 0.330  10\n",
-       "⋮    ⋮ ⋮     ⋮     ⋮     ⋮      ⋮      ⋮      ⋮      ⋮ \n",
-       "4147 M 0.695 0.550 0.195 1.6645 0.7270 0.3600 0.4450 11\n",
-       "4148 M 0.770 0.605 0.175 2.0505 0.8005 0.5260 0.3550 11\n",
-       "4149 I 0.280 0.215 0.070 0.1240 0.0630 0.0215 0.0300  6\n",
-       "4150 I 0.330 0.230 0.080 0.1400 0.0565 0.0365 0.0460  7\n",
-       "4151 I 0.350 0.250 0.075 0.1695 0.0835 0.0355 0.0410  6\n",
-       "4152 I 0.370 0.280 0.090 0.2180 0.0995 0.0545 0.0615  7\n",
-       "4153 I 0.430 0.315 0.115 0.3840 0.1885 0.0715 0.1100  8\n",
-       "4154 I 0.435 0.330 0.095 0.3930 0.2190 0.0750 0.0885  6\n",
-       "4155 I 0.440 0.350 0.110 0.3805 0.1575 0.0895 0.1150  6\n",
-       "4156 M 0.475 0.370 0.110 0.4895 0.2185 0.1070 0.1460  8\n",
-       "4157 M 0.475 0.360 0.140 0.5135 0.2410 0.1045 0.1550  8\n",
-       "4158 I 0.480 0.355 0.110 0.4495 0.2010 0.0890 0.1400  8\n",
-       "4159 F 0.560 0.440 0.135 0.8025 0.3500 0.1615 0.2590  9\n",
-       "4160 F 0.585 0.475 0.165 1.0530 0.4580 0.2170 0.3000 11\n",
-       "4161 F 0.585 0.455 0.170 0.9945 0.4255 0.2630 0.2845 11\n",
-       "4162 M 0.385 0.255 0.100 0.3175 0.1370 0.0680 0.0920  8\n",
-       "4163 I 0.390 0.310 0.085 0.3440 0.1810 0.0695 0.0790  7\n",
-       "4164 I 0.390 0.290 0.100 0.2845 0.1255 0.0635 0.0810  7\n",
-       "4165 I 0.405 0.300 0.085 0.3035 0.1500 0.0505 0.0880  7\n",
-       "4166 I 0.475 0.365 0.115 0.4990 0.2320 0.0885 0.1560 10\n",
-       "4167 M 0.500 0.380 0.125 0.5770 0.2690 0.1265 0.1535  9\n",
-       "4168 F 0.515 0.400 0.125 0.6150 0.2865 0.1230 0.1765  8\n",
-       "4169 M 0.520 0.385 0.165 0.7910 0.3750 0.1800 0.1815 10\n",
-       "4170 M 0.550 0.430 0.130 0.8395 0.3155 0.1955 0.2405 10\n",
-       "4171 M 0.560 0.430 0.155 0.8675 0.4000 0.1720 0.2290  8\n",
-       "4172 F 0.565 0.450 0.165 0.8870 0.3700 0.2390 0.2490 11\n",
-       "4173 M 0.590 0.440 0.135 0.9660 0.4390 0.2145 0.2605 10\n",
-       "4174 M 0.600 0.475 0.205 1.1760 0.5255 0.2875 0.3080  9\n",
-       "4175 F 0.625 0.485 0.150 1.0945 0.5310 0.2610 0.2960 10\n",
-       "4176 M 0.710 0.555 0.195 1.9485 0.9455 0.3765 0.4950 12"
+       "     Sex Length Diameter Height Whole_weight Shucked_weight Visera_weight\n",
+       "1    M   0.350  0.265    0.090  0.2255       0.0995         0.0485       \n",
+       "2    F   0.530  0.420    0.135  0.6770       0.2565         0.1415       \n",
+       "3    M   0.440  0.365    0.125  0.5160       0.2155         0.1140       \n",
+       "4    I   0.330  0.255    0.080  0.2050       0.0895         0.0395       \n",
+       "5    I   0.425  0.300    0.095  0.3515       0.1410         0.0775       \n",
+       "6    F   0.530  0.415    0.150  0.7775       0.2370         0.1415       \n",
+       "7    F   0.545  0.425    0.125  0.7680       0.2940         0.1495       \n",
+       "8    M   0.475  0.370    0.125  0.5095       0.2165         0.1125       \n",
+       "9    F   0.550  0.440    0.150  0.8945       0.3145         0.1510       \n",
+       "10   F   0.525  0.380    0.140  0.6065       0.1940         0.1475       \n",
+       "11   M   0.430  0.350    0.110  0.4060       0.1675         0.0810       \n",
+       "12   M   0.490  0.380    0.135  0.5415       0.2175         0.0950       \n",
+       "13   F   0.535  0.405    0.145  0.6845       0.2725         0.1710       \n",
+       "14   F   0.470  0.355    0.100  0.4755       0.1675         0.0805       \n",
+       "15   M   0.500  0.400    0.130  0.6645       0.2580         0.1330       \n",
+       "16   I   0.355  0.280    0.085  0.2905       0.0950         0.0395       \n",
+       "17   F   0.440  0.340    0.100  0.4510       0.1880         0.0870       \n",
+       "18   M   0.365  0.295    0.080  0.2555       0.0970         0.0430       \n",
+       "19   M   0.450  0.320    0.100  0.3810       0.1705         0.0750       \n",
+       "20   M   0.355  0.280    0.095  0.2455       0.0955         0.0620       \n",
+       "21   I   0.380  0.275    0.100  0.2255       0.0800         0.0490       \n",
+       "22   F   0.565  0.440    0.155  0.9395       0.4275         0.2140       \n",
+       "23   F   0.550  0.415    0.135  0.7635       0.3180         0.2100       \n",
+       "24   F   0.615  0.480    0.165  1.1615       0.5130         0.3010       \n",
+       "25   F   0.560  0.440    0.140  0.9285       0.3825         0.1880       \n",
+       "26   F   0.580  0.450    0.185  0.9955       0.3945         0.2720       \n",
+       "27   M   0.590  0.445    0.140  0.9310       0.3560         0.2340       \n",
+       "28   M   0.605  0.475    0.180  0.9365       0.3940         0.2190       \n",
+       "29   M   0.575  0.425    0.140  0.8635       0.3930         0.2270       \n",
+       "30   M   0.580  0.470    0.165  0.9975       0.3935         0.2420       \n",
+       "⋮    ⋮   ⋮      ⋮        ⋮      ⋮            ⋮              ⋮            \n",
+       "4147 M   0.695  0.550    0.195  1.6645       0.7270         0.3600       \n",
+       "4148 M   0.770  0.605    0.175  2.0505       0.8005         0.5260       \n",
+       "4149 I   0.280  0.215    0.070  0.1240       0.0630         0.0215       \n",
+       "4150 I   0.330  0.230    0.080  0.1400       0.0565         0.0365       \n",
+       "4151 I   0.350  0.250    0.075  0.1695       0.0835         0.0355       \n",
+       "4152 I   0.370  0.280    0.090  0.2180       0.0995         0.0545       \n",
+       "4153 I   0.430  0.315    0.115  0.3840       0.1885         0.0715       \n",
+       "4154 I   0.435  0.330    0.095  0.3930       0.2190         0.0750       \n",
+       "4155 I   0.440  0.350    0.110  0.3805       0.1575         0.0895       \n",
+       "4156 M   0.475  0.370    0.110  0.4895       0.2185         0.1070       \n",
+       "4157 M   0.475  0.360    0.140  0.5135       0.2410         0.1045       \n",
+       "4158 I   0.480  0.355    0.110  0.4495       0.2010         0.0890       \n",
+       "4159 F   0.560  0.440    0.135  0.8025       0.3500         0.1615       \n",
+       "4160 F   0.585  0.475    0.165  1.0530       0.4580         0.2170       \n",
+       "4161 F   0.585  0.455    0.170  0.9945       0.4255         0.2630       \n",
+       "4162 M   0.385  0.255    0.100  0.3175       0.1370         0.0680       \n",
+       "4163 I   0.390  0.310    0.085  0.3440       0.1810         0.0695       \n",
+       "4164 I   0.390  0.290    0.100  0.2845       0.1255         0.0635       \n",
+       "4165 I   0.405  0.300    0.085  0.3035       0.1500         0.0505       \n",
+       "4166 I   0.475  0.365    0.115  0.4990       0.2320         0.0885       \n",
+       "4167 M   0.500  0.380    0.125  0.5770       0.2690         0.1265       \n",
+       "4168 F   0.515  0.400    0.125  0.6150       0.2865         0.1230       \n",
+       "4169 M   0.520  0.385    0.165  0.7910       0.3750         0.1800       \n",
+       "4170 M   0.550  0.430    0.130  0.8395       0.3155         0.1955       \n",
+       "4171 M   0.560  0.430    0.155  0.8675       0.4000         0.1720       \n",
+       "4172 F   0.565  0.450    0.165  0.8870       0.3700         0.2390       \n",
+       "4173 M   0.590  0.440    0.135  0.9660       0.4390         0.2145       \n",
+       "4174 M   0.600  0.475    0.205  1.1760       0.5255         0.2875       \n",
+       "4175 F   0.625  0.485    0.150  1.0945       0.5310         0.2610       \n",
+       "4176 M   0.710  0.555    0.195  1.9485       0.9455         0.3765       \n",
+       "     Shell_weight Rings\n",
+       "1    0.070         7   \n",
+       "2    0.210         9   \n",
+       "3    0.155        10   \n",
+       "4    0.055         7   \n",
+       "5    0.120         8   \n",
+       "6    0.330        20   \n",
+       "7    0.260        16   \n",
+       "8    0.165         9   \n",
+       "9    0.320        19   \n",
+       "10   0.210        14   \n",
+       "11   0.135        10   \n",
+       "12   0.190        11   \n",
+       "13   0.205        10   \n",
+       "14   0.185        10   \n",
+       "15   0.240        12   \n",
+       "16   0.115         7   \n",
+       "17   0.130        10   \n",
+       "18   0.100         7   \n",
+       "19   0.115         9   \n",
+       "20   0.075        11   \n",
+       "21   0.085        10   \n",
+       "22   0.270        12   \n",
+       "23   0.200         9   \n",
+       "24   0.305        10   \n",
+       "25   0.300        11   \n",
+       "26   0.285        11   \n",
+       "27   0.280        12   \n",
+       "28   0.295        15   \n",
+       "29   0.200        11   \n",
+       "30   0.330        10   \n",
+       "⋮    ⋮            ⋮    \n",
+       "4147 0.4450       11   \n",
+       "4148 0.3550       11   \n",
+       "4149 0.0300        6   \n",
+       "4150 0.0460        7   \n",
+       "4151 0.0410        6   \n",
+       "4152 0.0615        7   \n",
+       "4153 0.1100        8   \n",
+       "4154 0.0885        6   \n",
+       "4155 0.1150        6   \n",
+       "4156 0.1460        8   \n",
+       "4157 0.1550        8   \n",
+       "4158 0.1400        8   \n",
+       "4159 0.2590        9   \n",
+       "4160 0.3000       11   \n",
+       "4161 0.2845       11   \n",
+       "4162 0.0920        8   \n",
+       "4163 0.0790        7   \n",
+       "4164 0.0810        7   \n",
+       "4165 0.0880        7   \n",
+       "4166 0.1560       10   \n",
+       "4167 0.1535        9   \n",
+       "4168 0.1765        8   \n",
+       "4169 0.1815       10   \n",
+       "4170 0.2405       10   \n",
+       "4171 0.2290        8   \n",
+       "4172 0.2490       11   \n",
+       "4173 0.2605       10   \n",
+       "4174 0.3080        9   \n",
+       "4175 0.2960       10   \n",
+       "4176 0.4950       12   "
       ]
      },
      "metadata": {},
@@ -314,10 +376,10 @@
     }
    ],
    "source": [
-    "url <- \"https://raw.githubusercontent.com/werehappy/DSCI-Group-Project-26-/main/data/abalone.data?token=GHSAT0AAAAAACMWOZIGGP2SZZTQZYCJ2W72ZPH6GIA\"\n",
+    "url <- \"https://raw.githubusercontent.com/werehappy/DSCI-Group-Project-26-/main/data/abalone.data?token=GHSAT0AAAAAACMWOZIHUWO6UOVI7KO6MIFAZPH6NHQ\"\n",
     "download.file(url, \"data/abalone_data.csv\")\n",
     "abalone_data <- read_delim(\"data/abalone_data.csv\", delim = \",\")\n",
-    "colnames(abalone_d <- c(\"Sex\", \"Length\", \"Diameter\", \n",
+    "colnames(abalone_data) <- c(\"Sex\", \"Length\", \"Diameter\", \n",
     "                      \"Height\", \"Whole_weight\", \"Shucked_weight\", \"Visera_weight\", \"Shell_weight\", \"Rings\")\n",
     "abalone_data"
    ]
