Filtered and Fatorised the abalone dataset

--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "e7a969ff-bed6-413a-b966-eab3050e44cb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "f8e1faea-57f8-4185-acf3-b55ecad029b5",
    "metadata": {},
    "outputs": [
@@ -386,8 +386,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a5e7a701-b281-4852-b367-b8534877d172",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4176 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Sex</th><th scope=col>Length</th><th scope=col>Diameter</th><th scope=col>Height</th><th scope=col>Whole_weight</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Male  </td><td>0.350</td><td>0.265</td><td>0.090</td><td>0.2255</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.530</td><td>0.420</td><td>0.135</td><td>0.6770</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.440</td><td>0.365</td><td>0.125</td><td>0.5160</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.330</td><td>0.255</td><td>0.080</td><td>0.2050</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.425</td><td>0.300</td><td>0.095</td><td>0.3515</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.530</td><td>0.415</td><td>0.150</td><td>0.7775</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.545</td><td>0.425</td><td>0.125</td><td>0.7680</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.475</td><td>0.370</td><td>0.125</td><td>0.5095</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.550</td><td>0.440</td><td>0.150</td><td>0.8945</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.525</td><td>0.380</td><td>0.140</td><td>0.6065</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.430</td><td>0.350</td><td>0.110</td><td>0.4060</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.490</td><td>0.380</td><td>0.135</td><td>0.5415</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.535</td><td>0.405</td><td>0.145</td><td>0.6845</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.470</td><td>0.355</td><td>0.100</td><td>0.4755</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.500</td><td>0.400</td><td>0.130</td><td>0.6645</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.355</td><td>0.280</td><td>0.085</td><td>0.2905</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.440</td><td>0.340</td><td>0.100</td><td>0.4510</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.365</td><td>0.295</td><td>0.080</td><td>0.2555</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.450</td><td>0.320</td><td>0.100</td><td>0.3810</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.355</td><td>0.280</td><td>0.095</td><td>0.2455</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.380</td><td>0.275</td><td>0.100</td><td>0.2255</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.565</td><td>0.440</td><td>0.155</td><td>0.9395</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.550</td><td>0.415</td><td>0.135</td><td>0.7635</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.615</td><td>0.480</td><td>0.165</td><td>1.1615</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.560</td><td>0.440</td><td>0.140</td><td>0.9285</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.580</td><td>0.450</td><td>0.185</td><td>0.9955</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.590</td><td>0.445</td><td>0.140</td><td>0.9310</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.605</td><td>0.475</td><td>0.180</td><td>0.9365</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.575</td><td>0.425</td><td>0.140</td><td>0.8635</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.580</td><td>0.470</td><td>0.165</td><td>0.9975</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.695</td><td>0.550</td><td>0.195</td><td>1.6645</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.770</td><td>0.605</td><td>0.175</td><td>2.0505</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.280</td><td>0.215</td><td>0.070</td><td>0.1240</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.330</td><td>0.230</td><td>0.080</td><td>0.1400</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.350</td><td>0.250</td><td>0.075</td><td>0.1695</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.370</td><td>0.280</td><td>0.090</td><td>0.2180</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.430</td><td>0.315</td><td>0.115</td><td>0.3840</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.435</td><td>0.330</td><td>0.095</td><td>0.3930</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.440</td><td>0.350</td><td>0.110</td><td>0.3805</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.475</td><td>0.370</td><td>0.110</td><td>0.4895</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.475</td><td>0.360</td><td>0.140</td><td>0.5135</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.480</td><td>0.355</td><td>0.110</td><td>0.4495</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.560</td><td>0.440</td><td>0.135</td><td>0.8025</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.585</td><td>0.475</td><td>0.165</td><td>1.0530</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.585</td><td>0.455</td><td>0.170</td><td>0.9945</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.385</td><td>0.255</td><td>0.100</td><td>0.3175</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.390</td><td>0.310</td><td>0.085</td><td>0.3440</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.390</td><td>0.290</td><td>0.100</td><td>0.2845</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.405</td><td>0.300</td><td>0.085</td><td>0.3035</td></tr>\n",
+       "\t<tr><td>Infant</td><td>0.475</td><td>0.365</td><td>0.115</td><td>0.4990</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.500</td><td>0.380</td><td>0.125</td><td>0.5770</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.515</td><td>0.400</td><td>0.125</td><td>0.6150</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.520</td><td>0.385</td><td>0.165</td><td>0.7910</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.550</td><td>0.430</td><td>0.130</td><td>0.8395</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.560</td><td>0.430</td><td>0.155</td><td>0.8675</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.565</td><td>0.450</td><td>0.165</td><td>0.8870</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.590</td><td>0.440</td><td>0.135</td><td>0.9660</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.600</td><td>0.475</td><td>0.205</td><td>1.1760</td></tr>\n",
+       "\t<tr><td>Female</td><td>0.625</td><td>0.485</td><td>0.150</td><td>1.0945</td></tr>\n",
+       "\t<tr><td>Male  </td><td>0.710</td><td>0.555</td><td>0.195</td><td>1.9485</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4176 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " Sex & Length & Diameter & Height & Whole\\_weight\\\\\n",
+       " <fct> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t Male   & 0.350 & 0.265 & 0.090 & 0.2255\\\\\n",
+       "\t Female & 0.530 & 0.420 & 0.135 & 0.6770\\\\\n",
+       "\t Male   & 0.440 & 0.365 & 0.125 & 0.5160\\\\\n",
+       "\t Infant & 0.330 & 0.255 & 0.080 & 0.2050\\\\\n",
+       "\t Infant & 0.425 & 0.300 & 0.095 & 0.3515\\\\\n",
+       "\t Female & 0.530 & 0.415 & 0.150 & 0.7775\\\\\n",
+       "\t Female & 0.545 & 0.425 & 0.125 & 0.7680\\\\\n",
+       "\t Male   & 0.475 & 0.370 & 0.125 & 0.5095\\\\\n",
+       "\t Female & 0.550 & 0.440 & 0.150 & 0.8945\\\\\n",
+       "\t Female & 0.525 & 0.380 & 0.140 & 0.6065\\\\\n",
+       "\t Male   & 0.430 & 0.350 & 0.110 & 0.4060\\\\\n",
+       "\t Male   & 0.490 & 0.380 & 0.135 & 0.5415\\\\\n",
+       "\t Female & 0.535 & 0.405 & 0.145 & 0.6845\\\\\n",
+       "\t Female & 0.470 & 0.355 & 0.100 & 0.4755\\\\\n",
+       "\t Male   & 0.500 & 0.400 & 0.130 & 0.6645\\\\\n",
+       "\t Infant & 0.355 & 0.280 & 0.085 & 0.2905\\\\\n",
+       "\t Female & 0.440 & 0.340 & 0.100 & 0.4510\\\\\n",
+       "\t Male   & 0.365 & 0.295 & 0.080 & 0.2555\\\\\n",
+       "\t Male   & 0.450 & 0.320 & 0.100 & 0.3810\\\\\n",
+       "\t Male   & 0.355 & 0.280 & 0.095 & 0.2455\\\\\n",
+       "\t Infant & 0.380 & 0.275 & 0.100 & 0.2255\\\\\n",
+       "\t Female & 0.565 & 0.440 & 0.155 & 0.9395\\\\\n",
+       "\t Female & 0.550 & 0.415 & 0.135 & 0.7635\\\\\n",
+       "\t Female & 0.615 & 0.480 & 0.165 & 1.1615\\\\\n",
+       "\t Female & 0.560 & 0.440 & 0.140 & 0.9285\\\\\n",
+       "\t Female & 0.580 & 0.450 & 0.185 & 0.9955\\\\\n",
+       "\t Male   & 0.590 & 0.445 & 0.140 & 0.9310\\\\\n",
+       "\t Male   & 0.605 & 0.475 & 0.180 & 0.9365\\\\\n",
+       "\t Male   & 0.575 & 0.425 & 0.140 & 0.8635\\\\\n",
+       "\t Male   & 0.580 & 0.470 & 0.165 & 0.9975\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t Male   & 0.695 & 0.550 & 0.195 & 1.6645\\\\\n",
+       "\t Male   & 0.770 & 0.605 & 0.175 & 2.0505\\\\\n",
+       "\t Infant & 0.280 & 0.215 & 0.070 & 0.1240\\\\\n",
+       "\t Infant & 0.330 & 0.230 & 0.080 & 0.1400\\\\\n",
+       "\t Infant & 0.350 & 0.250 & 0.075 & 0.1695\\\\\n",
+       "\t Infant & 0.370 & 0.280 & 0.090 & 0.2180\\\\\n",
+       "\t Infant & 0.430 & 0.315 & 0.115 & 0.3840\\\\\n",
+       "\t Infant & 0.435 & 0.330 & 0.095 & 0.3930\\\\\n",
+       "\t Infant & 0.440 & 0.350 & 0.110 & 0.3805\\\\\n",
+       "\t Male   & 0.475 & 0.370 & 0.110 & 0.4895\\\\\n",
+       "\t Male   & 0.475 & 0.360 & 0.140 & 0.5135\\\\\n",
+       "\t Infant & 0.480 & 0.355 & 0.110 & 0.4495\\\\\n",
+       "\t Female & 0.560 & 0.440 & 0.135 & 0.8025\\\\\n",
+       "\t Female & 0.585 & 0.475 & 0.165 & 1.0530\\\\\n",
+       "\t Female & 0.585 & 0.455 & 0.170 & 0.9945\\\\\n",
+       "\t Male   & 0.385 & 0.255 & 0.100 & 0.3175\\\\\n",
+       "\t Infant & 0.390 & 0.310 & 0.085 & 0.3440\\\\\n",
+       "\t Infant & 0.390 & 0.290 & 0.100 & 0.2845\\\\\n",
+       "\t Infant & 0.405 & 0.300 & 0.085 & 0.3035\\\\\n",
+       "\t Infant & 0.475 & 0.365 & 0.115 & 0.4990\\\\\n",
+       "\t Male   & 0.500 & 0.380 & 0.125 & 0.5770\\\\\n",
+       "\t Female & 0.515 & 0.400 & 0.125 & 0.6150\\\\\n",
+       "\t Male   & 0.520 & 0.385 & 0.165 & 0.7910\\\\\n",
+       "\t Male   & 0.550 & 0.430 & 0.130 & 0.8395\\\\\n",
+       "\t Male   & 0.560 & 0.430 & 0.155 & 0.8675\\\\\n",
+       "\t Female & 0.565 & 0.450 & 0.165 & 0.8870\\\\\n",
+       "\t Male   & 0.590 & 0.440 & 0.135 & 0.9660\\\\\n",
+       "\t Male   & 0.600 & 0.475 & 0.205 & 1.1760\\\\\n",
+       "\t Female & 0.625 & 0.485 & 0.150 & 1.0945\\\\\n",
+       "\t Male   & 0.710 & 0.555 & 0.195 & 1.9485\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4176 × 5\n",
+       "\n",
+       "| Sex &lt;fct&gt; | Length &lt;dbl&gt; | Diameter &lt;dbl&gt; | Height &lt;dbl&gt; | Whole_weight &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| Male   | 0.350 | 0.265 | 0.090 | 0.2255 |\n",
+       "| Female | 0.530 | 0.420 | 0.135 | 0.6770 |\n",
+       "| Male   | 0.440 | 0.365 | 0.125 | 0.5160 |\n",
+       "| Infant | 0.330 | 0.255 | 0.080 | 0.2050 |\n",
+       "| Infant | 0.425 | 0.300 | 0.095 | 0.3515 |\n",
+       "| Female | 0.530 | 0.415 | 0.150 | 0.7775 |\n",
+       "| Female | 0.545 | 0.425 | 0.125 | 0.7680 |\n",
+       "| Male   | 0.475 | 0.370 | 0.125 | 0.5095 |\n",
+       "| Female | 0.550 | 0.440 | 0.150 | 0.8945 |\n",
+       "| Female | 0.525 | 0.380 | 0.140 | 0.6065 |\n",
+       "| Male   | 0.430 | 0.350 | 0.110 | 0.4060 |\n",
+       "| Male   | 0.490 | 0.380 | 0.135 | 0.5415 |\n",
+       "| Female | 0.535 | 0.405 | 0.145 | 0.6845 |\n",
+       "| Female | 0.470 | 0.355 | 0.100 | 0.4755 |\n",
+       "| Male   | 0.500 | 0.400 | 0.130 | 0.6645 |\n",
+       "| Infant | 0.355 | 0.280 | 0.085 | 0.2905 |\n",
+       "| Female | 0.440 | 0.340 | 0.100 | 0.4510 |\n",
+       "| Male   | 0.365 | 0.295 | 0.080 | 0.2555 |\n",
+       "| Male   | 0.450 | 0.320 | 0.100 | 0.3810 |\n",
+       "| Male   | 0.355 | 0.280 | 0.095 | 0.2455 |\n",
+       "| Infant | 0.380 | 0.275 | 0.100 | 0.2255 |\n",
+       "| Female | 0.565 | 0.440 | 0.155 | 0.9395 |\n",
+       "| Female | 0.550 | 0.415 | 0.135 | 0.7635 |\n",
+       "| Female | 0.615 | 0.480 | 0.165 | 1.1615 |\n",
+       "| Female | 0.560 | 0.440 | 0.140 | 0.9285 |\n",
+       "| Female | 0.580 | 0.450 | 0.185 | 0.9955 |\n",
+       "| Male   | 0.590 | 0.445 | 0.140 | 0.9310 |\n",
+       "| Male   | 0.605 | 0.475 | 0.180 | 0.9365 |\n",
+       "| Male   | 0.575 | 0.425 | 0.140 | 0.8635 |\n",
+       "| Male   | 0.580 | 0.470 | 0.165 | 0.9975 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| Male   | 0.695 | 0.550 | 0.195 | 1.6645 |\n",
+       "| Male   | 0.770 | 0.605 | 0.175 | 2.0505 |\n",
+       "| Infant | 0.280 | 0.215 | 0.070 | 0.1240 |\n",
+       "| Infant | 0.330 | 0.230 | 0.080 | 0.1400 |\n",
+       "| Infant | 0.350 | 0.250 | 0.075 | 0.1695 |\n",
+       "| Infant | 0.370 | 0.280 | 0.090 | 0.2180 |\n",
+       "| Infant | 0.430 | 0.315 | 0.115 | 0.3840 |\n",
+       "| Infant | 0.435 | 0.330 | 0.095 | 0.3930 |\n",
+       "| Infant | 0.440 | 0.350 | 0.110 | 0.3805 |\n",
+       "| Male   | 0.475 | 0.370 | 0.110 | 0.4895 |\n",
+       "| Male   | 0.475 | 0.360 | 0.140 | 0.5135 |\n",
+       "| Infant | 0.480 | 0.355 | 0.110 | 0.4495 |\n",
+       "| Female | 0.560 | 0.440 | 0.135 | 0.8025 |\n",
+       "| Female | 0.585 | 0.475 | 0.165 | 1.0530 |\n",
+       "| Female | 0.585 | 0.455 | 0.170 | 0.9945 |\n",
+       "| Male   | 0.385 | 0.255 | 0.100 | 0.3175 |\n",
+       "| Infant | 0.390 | 0.310 | 0.085 | 0.3440 |\n",
+       "| Infant | 0.390 | 0.290 | 0.100 | 0.2845 |\n",
+       "| Infant | 0.405 | 0.300 | 0.085 | 0.3035 |\n",
+       "| Infant | 0.475 | 0.365 | 0.115 | 0.4990 |\n",
+       "| Male   | 0.500 | 0.380 | 0.125 | 0.5770 |\n",
+       "| Female | 0.515 | 0.400 | 0.125 | 0.6150 |\n",
+       "| Male   | 0.520 | 0.385 | 0.165 | 0.7910 |\n",
+       "| Male   | 0.550 | 0.430 | 0.130 | 0.8395 |\n",
+       "| Male   | 0.560 | 0.430 | 0.155 | 0.8675 |\n",
+       "| Female | 0.565 | 0.450 | 0.165 | 0.8870 |\n",
+       "| Male   | 0.590 | 0.440 | 0.135 | 0.9660 |\n",
+       "| Male   | 0.600 | 0.475 | 0.205 | 1.1760 |\n",
+       "| Female | 0.625 | 0.485 | 0.150 | 1.0945 |\n",
+       "| Male   | 0.710 | 0.555 | 0.195 | 1.9485 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Sex    Length Diameter Height Whole_weight\n",
+       "1    Male   0.350  0.265    0.090  0.2255      \n",
+       "2    Female 0.530  0.420    0.135  0.6770      \n",
+       "3    Male   0.440  0.365    0.125  0.5160      \n",
+       "4    Infant 0.330  0.255    0.080  0.2050      \n",
+       "5    Infant 0.425  0.300    0.095  0.3515      \n",
+       "6    Female 0.530  0.415    0.150  0.7775      \n",
+       "7    Female 0.545  0.425    0.125  0.7680      \n",
+       "8    Male   0.475  0.370    0.125  0.5095      \n",
+       "9    Female 0.550  0.440    0.150  0.8945      \n",
+       "10   Female 0.525  0.380    0.140  0.6065      \n",
+       "11   Male   0.430  0.350    0.110  0.4060      \n",
+       "12   Male   0.490  0.380    0.135  0.5415      \n",
+       "13   Female 0.535  0.405    0.145  0.6845      \n",
+       "14   Female 0.470  0.355    0.100  0.4755      \n",
+       "15   Male   0.500  0.400    0.130  0.6645      \n",
+       "16   Infant 0.355  0.280    0.085  0.2905      \n",
+       "17   Female 0.440  0.340    0.100  0.4510      \n",
+       "18   Male   0.365  0.295    0.080  0.2555      \n",
+       "19   Male   0.450  0.320    0.100  0.3810      \n",
+       "20   Male   0.355  0.280    0.095  0.2455      \n",
+       "21   Infant 0.380  0.275    0.100  0.2255      \n",
+       "22   Female 0.565  0.440    0.155  0.9395      \n",
+       "23   Female 0.550  0.415    0.135  0.7635      \n",
+       "24   Female 0.615  0.480    0.165  1.1615      \n",
+       "25   Female 0.560  0.440    0.140  0.9285      \n",
+       "26   Female 0.580  0.450    0.185  0.9955      \n",
+       "27   Male   0.590  0.445    0.140  0.9310      \n",
+       "28   Male   0.605  0.475    0.180  0.9365      \n",
+       "29   Male   0.575  0.425    0.140  0.8635      \n",
+       "30   Male   0.580  0.470    0.165  0.9975      \n",
+       "⋮    ⋮      ⋮      ⋮        ⋮      ⋮           \n",
+       "4147 Male   0.695  0.550    0.195  1.6645      \n",
+       "4148 Male   0.770  0.605    0.175  2.0505      \n",
+       "4149 Infant 0.280  0.215    0.070  0.1240      \n",
+       "4150 Infant 0.330  0.230    0.080  0.1400      \n",
+       "4151 Infant 0.350  0.250    0.075  0.1695      \n",
+       "4152 Infant 0.370  0.280    0.090  0.2180      \n",
+       "4153 Infant 0.430  0.315    0.115  0.3840      \n",
+       "4154 Infant 0.435  0.330    0.095  0.3930      \n",
+       "4155 Infant 0.440  0.350    0.110  0.3805      \n",
+       "4156 Male   0.475  0.370    0.110  0.4895      \n",
+       "4157 Male   0.475  0.360    0.140  0.5135      \n",
+       "4158 Infant 0.480  0.355    0.110  0.4495      \n",
+       "4159 Female 0.560  0.440    0.135  0.8025      \n",
+       "4160 Female 0.585  0.475    0.165  1.0530      \n",
+       "4161 Female 0.585  0.455    0.170  0.9945      \n",
+       "4162 Male   0.385  0.255    0.100  0.3175      \n",
+       "4163 Infant 0.390  0.310    0.085  0.3440      \n",
+       "4164 Infant 0.390  0.290    0.100  0.2845      \n",
+       "4165 Infant 0.405  0.300    0.085  0.3035      \n",
+       "4166 Infant 0.475  0.365    0.115  0.4990      \n",
+       "4167 Male   0.500  0.380    0.125  0.5770      \n",
+       "4168 Female 0.515  0.400    0.125  0.6150      \n",
+       "4169 Male   0.520  0.385    0.165  0.7910      \n",
+       "4170 Male   0.550  0.430    0.130  0.8395      \n",
+       "4171 Male   0.560  0.430    0.155  0.8675      \n",
+       "4172 Female 0.565  0.450    0.165  0.8870      \n",
+       "4173 Male   0.590  0.440    0.135  0.9660      \n",
+       "4174 Male   0.600  0.475    0.205  1.1760      \n",
+       "4175 Female 0.625  0.485    0.150  1.0945      \n",
+       "4176 Male   0.710  0.555    0.195  1.9485      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "abalone_filtered_fct <- abalone_data |> mutate(Sex = as_factor(Sex)) |> \n",
+    "mutate(Sex = fct_recode(Sex, \"Male\" = \"M\", \"Female\" = \"F\", \"Infant\" = \"I\")) |> select(Sex:Whole_weight)\n",
+    "abalone_filtered_fct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24068255-e1df-4e97-83cc-8bc10c454987",
    "metadata": {},
    "outputs": [],
    "source": []
